# market-backtest

./: .env.example  .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  pyproject.toml
docs/: ENVIRONMENT.md  PROJECT_REQUIREMENTS.md
docs/phases/: PHASE_0_SETUP.md  PHASE_1_BINANCE_DOWNLOADER.md
market_backtest/: __init__.py
market_backtest/config/: __init__.py  settings.py
tests/: test_package.py
